--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7,3 +7,39 @@
     width: 100%;
     height: 300px;
 }
+
+/*  Profile Styles */
+
+.banner{
+    width: 100%;
+    height: 15rem;
+    background-color: #000;
+}
+.banner img {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    left: 1.5rem;
+    top: 5rem;
+}
+.banner .user-info{
+    color: #fff;
+    position: relative;
+    left: 15rem;
+    bottom: 2rem;
+    z-index: 1;
+    width: fit-content;
+}
+
+.profile-info{
+    height: auto;
+}
+.profile-info button, .profile-info div{
+    height: fit-content;
+}
+
+.review{
+    border: 1px solid olivedrab;
+    border-radius: 1rem;
+    margin: 1rem 1rem;
+}
