--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,7 @@
                 <a class="nav-link" href="/login">Login</a>
                 <a class="nav-link" href="/register">Sign Up</a>
                 <% } else {%> 
+                <a class="nav-link" href=<%= `/profile/${currentUser._id}` %> >Profile</a>
                 <a class="nav-link" href="/logout">Log Out</a>
                 <% } %> 
             </div>
